подключил шрифты на сайт видео 021

--- a/html css/example/css/style.css
+++ b/html css/example/css/style.css
@@ -4,6 +4,11 @@
     padding: 0;
 }
 
+
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
     position: relative;
     width: 1140px;
@@ -38,9 +43,8 @@ h1 {
 
 .title {
     color: #f9bf3b;
-    font-family: "Roboto - Black";
     font-size: 41px;
-    font-weight: 400;
+    font-weight: 900;
     line-height: 24px;
     text-transform: uppercase;
     text-align: center;
@@ -52,9 +56,8 @@ h2.title {
 
 .simple .title_big {
     color: #ffffff;
-    font-family: "Roboto - Black";
     font-size: 80px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
     margin-top: 21px;
@@ -67,13 +70,11 @@ h2.title {
     font-size: 21px;
     font-weight: 300;
     line-height: 28px;
-    font-family: "Roboto Light";
     text-align: center;
 }
 
 .promo .promo_text span {
    color: #f9bf3b;
-   font-family: "Roboto - Bold";
    font-weight: 700; 
 }
 
@@ -138,9 +139,8 @@ h2.title {
 .waiting .waitig_subheader {
     margin-top: 17px;
     color: #4a4a4a;
-    font-family: Roboto; 
     font-size: 23px;
-    font-weight: 400;
+    font-weight: 300;
     text-align: center;
 }
 
