--- a/Bootstrap/Uber/src/css/style.css
+++ b/Bootstrap/Uber/src/css/style.css
@@ -2,6 +2,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+header {
+    position: relative;
+}
+
 nav {
     height: 50px;
     background-color: #212121; 
@@ -9,6 +13,7 @@ nav {
 
 
 .menu {
+    position: fixed;
     display: flex;
     justify-content: space-between;
     padding: 13px 70px;
@@ -27,6 +32,8 @@ nav {
 }
 
 .subheader {
+    position: absolute;
+    width: 100%; 
     height: 84px;
     background-color: rgba(0,0,0, .6);
 }
@@ -78,5 +85,53 @@ nav {
     font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
+}
+
+.promo {
+    min-height: 800px;
+    background: url('../img/bg/main_bg.jpg') center center/cover no-repeat;
+    padding: 150px 0 135px 0;
+}
+
+.promo .promo_header {
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0;
+    text-align: center;
+}
+
+.promo .promo_subheader {
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 36px;
+    line-height: 36px;
+    margin: 0;
+    margin-top: 22px;
+    text-align: center;
+}
+
+.promo .promo_descr {
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    margin-top: 23px;
+}
+
+.promo_btn {
+    display: block;
+    margin: 118px auto 0 auto;
+    width: 259px;
+    height: 63px;
+    border: none;
+    border-radius: 4px;
+    background-color: #26B5D1;
+    color: white;
+    font-weight: 400;
 }
 
