--- a/preprocessor/example1/sass/style.sass
+++ b/preprocessor/example1/sass/style.sass
@@ -7,7 +7,8 @@ $text_color: blue
     background-color: red
     
     
-h1  
+h1 
+    margin-top: 10px
     color: $text_color
     font-size: 50px
     @include box 
@@ -19,7 +20,7 @@ h2
     h3 
         color: green
     &_color
-        background-color: yellow
+        background-color: orange
         button
             @include box
     .block_color
