--- a/preprocessor/example1/sass/style.sass
+++ b/preprocessor/example1/sass/style.sass
@@ -23,6 +23,40 @@ h2
         background-color: orange
         button
             @include box
+            width: 250px
+            transition: 0.5s all
+            &:hover
+                height: 100px
+                background-color: pink
+                cursor: pointer
+                color: red
+                font-size: 30px
+            &:active
+                background-color: green
+                border: dotted 5px
     .block_color
         color: $text_color
-    
+.round
+    display: flex
+    justify-content: space-evenly
+    align-items: center
+    margin-top: 60px auto
+    height: 200px
+    &:hover
+        border: dotted
+    .circle
+            display: flex
+            align-items: center
+            justify-content: center
+            width: 100px
+            height: 100px
+            border-radius: 50%
+            background: red
+            margin-top: 10px
+            &:active
+                background-color: grey
+            &:nth-child(2n)
+                background-color: blue
+    .circle1
+        
+          
