--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,111 +1,61 @@
-/* .title {
+.odd {
+    color: red;
+}
+
+.eve {
+    color: green;
+}
+
+.eee {
     color: blue;
 }
 
-p {
-    color: brown;
-    width: 300px;
-    text-align: justify;
-}
-
-
-
-#my {
-    color: red;
-    width: 600px;
-}
-
-h2 {
-    color: #491674;
-}
-
-h3 {
-    color: #bd9977;
-}
-
-td {
-    width: 400px;
-    height: 300px;
-} */
-
-
-
-h1 {
-    text-align: center;
-}
-
-h2 {
-    text-align: center;
-    width: 300px;
-    /*font-style: italic;*/
-}
-
-td {
-    width: 500px;
-    text-align: center;
-}
-
-th {
-    text-align: left;
-}
-
-p {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    text-indent: 50px;
-    /* font-family: "Comic Sans MS";*/
-    /*font: 'Times New Roman'13px/20px;*/
-}
-
-.line_h {
+.xxx {
     font-size: 30px;
-    line-height: 1.5;
-
-}
-
-#decor {
-    font-size: 30px;
-    text-decoration: overline;
-
-}
-
-.hr {
-    list-style-type: none;
-
-}
-
-.hr li a {
-    text-decoration: none;
 }
 
 .red {
     color: red;
 }
 
-
-
-
-.heading1 {
-    font-weight: bold;
-    color: darkblue;
-    width: 500px;
-    text-align: left;
-    text-indent: 30px;
+.green {
+    color: green;
 }
 
-.heading2 {
-    color: darkgreen;
+.blue {
+    color: blue;
 }
 
-#paragraph_0 {
-    text-indent: 30px;
-    width: 500px;
-    text-align: left;
+h2.header {
+    font-size: 40px;
 }
 
-#paragraph_0 i {
-    color: darkgreen;
+h3.header {
+    font-size: 30px;
 }
 
-.paragraph {
-    width: 400px;
+.eee i {
+    color: red;
 }
+
+.eee1 .red1 {
+    color: red;
+}
+
+.q h2 {
+    color: red;
+}
+
+.qq h3.bbb {
+    color: yellow;
+}
+
+.yyy p.ddd {
+    color: yellowgreen;
+}
+
+.kkk {
+    color: red;
+}
+
+/* 32 ошибка новичков */
