--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,11 +1,19 @@
-h2 {
-    font-size: 20px;
-    color: blue;
-}
-
-h2 {
-    font-style: italic;
+a {
     color: red;
 }
 
-/*41 Состояние ссылок на CSS*/
+a:hover {
+    text-decoration: none;
+}
+
+.zzz a {
+    color: yellowgreen;
+    text-decoration-color: teal;
+}
+
+.zzz a:hover {
+    text-decoration: none;
+    color: firebrick;
+}
+
+/*43 Оформление.Фоновый цвет*/
