--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,5 +1,6 @@
 /*Блочная модель*/
 /* 53 внешний отступ margin */
+/*
 #elem {
   width: 300px;
   padding: 10px;
@@ -15,5 +16,34 @@
   text-align: justify;
 
 }
-
+*/
 /* 59 */
+
+
+/* 60.Блочные элементы */
+/* 61.Особенности строчных элементов в СSS */
+
+
+.str {
+  display: inline;
+  width: 200px;
+  height: 300px;
+}
+
+.str a {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border: 1px solid gray;
+}
+
+.elem {
+  width: 100px;
+  height: 100px;
+  border: 1px solid red;
+  display: inline-block;
+  margin: 30px;
+  padding: 20px;
+}
+
+/* 65.Выравнивание блочных элементов на CSS */
