--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,116 +1,19 @@
-/*Блочная модель*/
-/* 53 внешний отступ margin */
-/*
-#elem {
-  width: 300px;
-  padding: 10px;
-  border: 1px solid red;
-  text-align: justify;
-  margin: 40px 0px 0px 30px;
-}
-
-#elem1 {
-  width: 500px;
-  padding: 20px;
-  border: 1px solid green;
-  text-align: justify;
-
-}
-*/
-/* 59 */
-
-/* 60.Блочные элементы */
-/* 61.Особенности строчных элементов в СSS */
-
-.str {
-  display: inline;
-  width: 200px;
-  height: 300px;
-}
-
-.str a {
-  display: block;
-  width: 50px;
-  height: 50px;
-  border: 1px solid gray;
-}
-
-.elem {
-  width: 100px;
-  height: 100px;
-  border: 1px solid red;
-  display: inline-block;
-  margin: 30px;
-  padding: 20px;
-}
-
-/* 65.Выравнивание блочных элементов на CSS */
-.c1 {
-  height: 200px;
-  width: 600px;
-  border: 1px solid gray;
-}
-
-.c2 {
-  height: 100px;
-  width: 200px;
-  border: 2px dashed red;
-  margin: 40px auto;
-}
-
-.c2 p {
-  padding: 10px;
-}
-
-.d1 {
-  height: 350px;
-  width: 800px;
-  border: 2px solid red;
-  margin-top: 100px;
-}
-
-.d2 {
-  height: 100px;
-  width: 100px;
-  border: 1px solid green;
-  margin: 10px auto 10px auto;
-}
-
-.d3 {
-  height: 100px;
-  width: 200px;
-  border: 1px solid green;
-  margin: 10px auto 10px auto;
-}
-
-.d4 {
-  height: 100px;
-  width: 300px;
-  border: 1px solid green;
-  margin: 10px auto 10px auto;
-}
-
-.d4 p {
-  text-align: center;
-}
-
-/* Выравнивание строчных элементов */
+/* 68.Флекс элементы на CSS */
 .parent {
-  padding: 10px 0;
+  display: flex;
+  /* потомки будут флекс элементами */
+  justify-content: space-evenly;
+  width: 700px;
+  height: 400px;
   border: 1px solid red;
-  margin-top: 50px;
-  text-align: center;
+  /* padding: 10px; */
 }
 
-.parent a {
-  border: dashed;
+.child {
+  width: 80px;
+  height: 50px;
+  border: 1px solid green;
+  /* margin: 10px; */
 }
 
-.parent1 {
-  padding-right: 10px;
-  border: 1px solid red;
-  text-align: right;
-}
-
-/*67.Выравнивание строчно-блочных элементов
-} */
+/* 70.Абсолютное позиционирование элементов на CSS */
