--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,19 +1,27 @@
-/* 68.Флекс элементы на CSS */
-.parent {
-  display: flex;
-  /* потомки будут флекс элементами */
-  justify-content: space-evenly;
-  width: 700px;
-  height: 400px;
-  border: 1px solid red;
-  /* padding: 10px; */
+/* 71.Относительное позиционирование элементов на CSS*/
+#elem1 {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+  background-color: #ff8888;
+}
+#elem2 {
+  position: relative;
+  top: -40px;
+  left: 40px;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+  background-color: #7e89eb;
+}
+#elem3 {
+  position: relative;
+  top: -80px;
+  left: 120px;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+  background-color: #4dee99;
 }
 
-.child {
-  width: 80px;
-  height: 50px;
-  border: 1px solid green;
-  /* margin: 10px; */
-}
-
-/* 70.Абсолютное позиционирование элементов на CSS */
+/* 72.Позиционирование относительно родителя на CSS */
