73.Позиционирование относительно абсолютного родителя на CSS

--- a/JS/codemu/codemuhtml/style.css
+++ b/JS/codemu/codemuhtml/style.css
@@ -1,27 +1,184 @@
 /* 71.Относительное позиционирование элементов на CSS*/
-#elem1 {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 20px;
-  background-color: #ff8888;
-}
-#elem2 {
-  position: relative;
-  top: -40px;
-  left: 40px;
-  width: 100px;
-  height: 100px;
-  margin-bottom: 20px;
-  background-color: #7e89eb;
-}
-#elem3 {
-  position: relative;
-  top: -80px;
-  left: 120px;
-  width: 100px;
-  height: 100px;
-  margin-bottom: 20px;
-  background-color: #4dee99;
-}
 
 /* 72.Позиционирование относительно родителя на CSS */
+#parent {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  /* border: 1px solid green; */
+  background-color: #4DEE99;
+}
+
+#child {
+  position: relative;
+  top: 60px;
+  left: 60px;
+  width: 120px;
+  height: 120px;
+  /* border: 1px solid red; */
+  background-color: #fff;
+}
+
+#child2 {
+  position: absolute;
+  bottom: 200px;
+  right: 150px;
+  width: 120px;
+  height: 120px;
+  /* border: 1px solid red; */
+  background-color: #fff;
+}
+
+#parent1 {
+  position: relative;
+  width: 200px;
+  height: 430px;
+  border: 1px solid;
+  margin: 60px 0 60px 400px;
+
+}
+
+#chi_da1 {
+  position: relative;
+  top: 50px;
+  left: 50px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+  border-radius: 50%;
+  background-color: red;
+}
+
+#chi_da2 {
+  position: relative;
+  top: 40px;
+  left: 50px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+  border-radius: 50%;
+  margin-top: 20px;
+  background-color: yellow;
+}
+
+#chi_da3 {
+  position: relative;
+  top: 40px;
+  left: 50px;
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+  border-radius: 50%;
+  margin-top: 10px;
+  background-color: green;
+}
+
+.round {
+  width: 500px;
+  height: 500px;
+  background-color: #4DEE99;
+  border-radius: 50%;
+  margin: 60px auto auto 400px;
+}
+
+#r_left {
+  position: relative;
+  top: 90px;
+  left: 90px;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#r_right {
+  position: relative;
+  top: -10px;
+  left: 310px;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#square {
+  position: relative;
+  top: 10px;
+  left: 210px;
+  width: 80px;
+  height: 80px;
+  background-color: #fff;
+  /* border-radius: 50%; */
+}
+
+#square2 {
+  position: relative;
+  top: 70px;
+  left: 150px;
+  width: 205px;
+  height: 20px;
+  background-color: #fff;
+}
+
+
+.round2 {
+  width: 500px;
+  height: 500px;
+  background-color: #C4CD12;
+  border-radius: 50%;
+  margin: 60px auto auto 400px;
+}
+
+#r_left2 {
+  position: relative;
+  top: 90px;
+  left: 90px;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#r_right2 {
+  position: relative;
+  top: -10px;
+  left: 310px;
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#square2a {
+  position: relative;
+  top: 10px;
+  left: 210px;
+  width: 80px;
+  height: 80px;
+  background-color: #fff;
+  border: 1px red;
+  z-index: 1;
+  border-radius: 50%;
+}
+
+#square3 {
+  position: relative;
+  bottom: 110px;
+  left: 125px;
+  width: 250px;
+  height: 250px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#square4 {
+  position: relative;
+  bottom: 380px;
+  left: 125px;
+  width: 250px;
+  height: 250px;
+  background-color: #C4CD12;
+  border-radius: 50%;
+}
+
+/* 73.Позиционирование относительно абсолютного родителя на CSS */
