--- a/expressjscom/genExpressBootstrap/myapp/views/about.pug
+++ b/expressjscom/genExpressBootstrap/myapp/views/about.pug
@@ -1,5 +1,11 @@
 extends layout
-
 block content
-  h1 About us
-  a О нас
+  <div class="container-fluid">
+  h3.text-primary.text-primary.bg-light About us (О нас)
+  
+  p.text-primary.bg-light Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptas ut, totam asperiores in cupiditate consequuntur ipsa. Veritatis cumque ducimus et minus, aliquid quidem obcaecati quisquam eveniet consectetur praesentium provident.Facere maxime error quasi provident laborum ducimus aspernatur nesciunt consequuntur est aut reiciendis nostrum, recusandae voluptatum voluptates. Debitis architecto iusto asperiores tempore eum, ratione temporibus possimus eveniet culpa officiis inventore?Dignissimos temporibus dolor saepe similique fugit dolorum voluptatibus praesentium id ipsam voluptas libero corporis ducimus veritatis, provident ab laborum rem quas perspiciatis, incidunt sequi quod veniam, optio rerum minus. Voluptatibus.Ab odit exercitationem earum, ipsam quod iure saepe ratione dicta inventore, nisi voluptas. Maiores voluptatum esse consequuntur, voluptas vel minus! Amet consectetur, quos quis sequi iste incidunt! Reiciendis, perspiciatis aliquam.Facere reprehenderit nemo asperiores. Magnam, voluptate esse. Distinctio quasi sunt maxime! Quos temporibus error hic sed a, voluptas itaque nostrum eos amet reprehenderit officiis non, voluptates ipsum quibusdam placeat id?Cum provident minus maxime delectus fugit voluptatem modi sunt autem quis rem magni maiores officia id ab culpa dolore, quibusdam adipisci optio. Beatae alias repellat aperiam deleniti atque fugit magni.Laboriosam vero, consectetur vel saepe, veniam ut fugiat, dignissimos ab distinctio blanditiis mollitia suscipit? Veritatis esse nam aperiam impedit accusantium illum, commodi ab ratione dolor! Quod quia culpa nihil quos.Itaque officia sed nostrum suscipit nihil repellendus perspiciatis illo sit, saepe eum modi maxime totam, libero fugiat voluptatum esse ex voluptatem assumenda porro quos. Praesentium impedit quo consequuntur dolorem. Eaque?
+  </div>
+
+
+
+  
