--- a/expressjscom/genExpressBootstrap/myapp/views/footer.pug
+++ b/expressjscom/genExpressBootstrap/myapp/views/footer.pug
@@ -1,1 +1,7 @@
-a Footer Подвал сайта
+.container-fluid
+    .text-white.bg-secondary
+      .row.row-cols-4
+        .col Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero similique quisquam recusandae quia dolores
+        .col Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero similique quisquam recusandae quia dolores
+        .col Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero similique quisquam recusandae quia dolores
+        .col Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint vero similique quisquam recusandae quia dolores
