--- a/pythoneducation/flask111/templates/index.html
+++ b/pythoneducation/flask111/templates/index.html
@@ -14,6 +14,7 @@
     </p>
     <a href="/about"class="btn btn-primary">О нас</a>
     <a href="/lorem"class="btn btn-primary">Лорем</a>
+    <a href="/register"class="btn btn-primary">Регистрация</a>
 {% endblock %}
 
 
