--- a/pythoneducation/flask111/templates/register.html
+++ b/pythoneducation/flask111/templates/register.html
@@ -5,6 +5,15 @@
 {% block content %}
 <div class="container">
     <h2>Регистрация пользователя</h2>
+    
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     <form method="POST" action="{{ url_for('register') }}">
         <div class="form-group">
             <label for="username">Имя пользователя:</label>
