--- a/pythoneducation/flask111/templates/register.html
+++ b/pythoneducation/flask111/templates/register.html
@@ -16,7 +16,7 @@
     
     <form method="POST" action="{{ url_for('register') }}">
         <div class="form-group">
-            <label for="username">Имя пользователя:</label>
+            <label for="username">Имя пользователя:</label> <!-- создаем поле для ввода имени пользователя -->
             <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="form-group">
