--- a/pythoneducation/flask111/templates/base.html
+++ b/pythoneducation/flask111/templates/base.html
@@ -9,8 +9,43 @@
 </head>
 <body>
     <!-- Шапка -->
-    <header class="bg-primary text-white text-center py-3">
-        <h1>Шапка</h1>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Прокрутка навбара</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Переключатель навигации">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Ссылка</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Ссылка
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Действие</a></li>
+                      <li><a class="dropdown-item" href="#">Другое действие</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Ссылка</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                  <button class="btn btn-outline-success" type="submit">Поиск</button>
+                </form>
+              </div>
+            </div>
+          </nav>
     </header>
     
     <!-- Bootstrap JS (with Popper) -->
@@ -23,8 +58,20 @@
     </div>
 
     <!-- Подвал -->
-    <footer class="bg-dark text-white text-center py-3 mt-5">
-        <p>Подвал</p>
+    <footer class="bg-primary-subtle text-white text-center py-3 mt-5">
+        <div class="card text-center">
+            <div class="card-header">
+              Рекомендуемые
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Особое обращение с заголовком</h5>
+              <p class="card-text">С вспомогательным текстом ниже в качестве естественного перехода к дополнительному контенту.</p>
+              <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
+            </div>
+            <div class="card-footer text-muted">
+              2 дня спустя
+            </div>
+          </div>
     </footer>
 
     <!-- Bootstrap JS через CDN -->
